[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "postflow"
version = "0.1.0"
description = "Git 기반 마크다운 콘텐츠 퍼블리싱 도구"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "nanoid>=2.0.0",
    "playwright>=1.40.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
postflow = "postflow.main:app"

[tool.setuptools.packages.find]
where = ["src"]
