[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unofficial-velog-cli"
version = "0.1.0"
description = "Markdown으로 Velog 글을 관리하고 발행하는 CLI 도구"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "nanoid>=2.0.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
vcli = "vcli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
